# Substrates

./: .gitignore  CITATION.cff  MANIFEST.in  NOTICE  README.md  environment.yml  pyproject.toml
jlens_materials/: README.md  analyze.py  animate.py  artifacts.py  auto_swap.py  compare.py  domain_prompts.py  lens_hub.py  llm.py  matviz.py  paper_protocol.py  pipeline.sh  report.py  report_latex.py  run_lens.py  swap.py
jlens_materials/experiments/: README.md  ensemble-steering-v2-preregistration.json  jacobian-steering-pilot-v1-preregistration.json  materials-heldout-v1-latent-geometry-protocol.md  materials-heldout-v1-preflight.json  materials-heldout-v1-preregistration.md  materials-heldout-v1-semantic-stream-protocol.md  relational-grain-steering-v4-preregistration.json  relational-grain-steering-v4_prompt_inventory.md  semantic-steering-v3-preregistration.json  semantic-steering-v3_prompt_inventory.md
jlens_materials/prompts/: README.md  fracture.json  materials-heldout-v1-preregistered.json  materials-heldout-v1-smoke.json  materials-key-concept-traces-v1.json  materials-mechanism-name-v1.json  materials-paper-v2-preregistered.json  materials-qualitative-pack.json  mechanics-paper-example.json  protein.json
jlens_materials/scripts/: amend_answer_code_binding_protocol.py  analyze_answer_code_binding.py  analyze_answer_scaffold_audit.py  analyze_candidate_nonsteering.py  analyze_counterfactual_activation_patching.py  analyze_cross_mechanism_activation_patching.py  analyze_cross_mechanism_outcome.py  analyze_exact_graph_partitions.py  analyze_fresh_law_abstraction_confirmation.py  analyze_graph_gauge_generalization.py  analyze_graph_isomorphism_generalization.py  analyze_graph_topology.py  analyze_graph_topology_rigorous.py  analyze_late_physics_replication.py  analyze_lexical_adversarial_representation.py  analyze_materials_heldout_v1.py  analyze_materials_latent_geometry.py  analyze_materials_paper_v2.py  analyze_mechanism_name_v1.py  analyze_mechanism_steering.py  analyze_multiseed_association.py  analyze_multiseed_prompt.py  analyze_neutral_anchored_relational_benchmark.py  analyze_open_vocabulary_consensus.py  analyze_option_free_question_end.py  analyze_option_free_relation_graph.py  analyze_relational_contrast_confirmation.py  (+53 more)
tests/: conftest.py  test_analysis_payload.py  test_lens_hub.py  test_paper_protocol.py  test_reporting_v2.py  test_swap_protocol.py
(+65 files in other folders)
