[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jlens-materials"
version = "0.1.0"
description = "Jacobian-lens interpretability experiments for materials science"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Markus J. Buehler", email = "mbuehler@mit.edu" }]
keywords = [
    "interpretability",
    "jacobian-lens",
    "mechanistic-interpretability",
    "transformers",
    "materials-science",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "torch>=2.2",
    "transformers>=4.45",
    "accelerate>=0.30",
    "sentencepiece>=0.2",
    "datasets>=2.19",
    "huggingface_hub>=0.30",
    "numpy>=1.24",
    "matplotlib>=3.7",
    "pillow>=10.0",
    "tqdm>=4.66",
]

[project.optional-dependencies]
analysis = [
    "anthropic>=0.40",
    "openai>=1.66",
]
experiments = [
    "networkx>=3.2",
    "pandas>=2.0",
    "scikit-learn>=1.3",
    "scipy>=1.10",
    "umap-learn>=0.5",
]
dev = [
    "build>=1.2",
    "pytest>=8,<10",
    "ruff>=0.6",
]

[project.urls]
"Repository" = "https://github.com/lamm-mit/Substrates"
"Jacobian Lens (upstream)" = "https://github.com/lamm-mit/jacobian-lens"

[tool.setuptools]
py-modules = [
    "analyze",
    "animate",
    "artifacts",
    "auto_swap",
    "compare",
    "domain_prompts",
    "lens_hub",
    "llm",
    "matviz",
    "paper_protocol",
    "report",
    "report_latex",
    "run_lens",
    "swap",
]
packages = ["jlens"]

[tool.setuptools.package-dir]
"" = "jlens_materials"
"jlens" = "jlens_materials/_vendor_jlens/jlens"

[tool.setuptools.package-data]
jlens = ["data/slice_vis.html"]

[project.scripts]
jlens-run = "run_lens:main"
jlens-analyze = "analyze:main"
jlens-report = "report_latex:main"
jlens-report-md = "report:main"
jlens-compare = "compare:main"
jlens-animate = "animate:main"
jlens-swap = "swap:main"
jlens-auto-swap = "auto_swap:main"
jlens-artifacts = "artifacts:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.ruff]
target-version = "py310"
line-length = 100
